--- a/sic/templates/404.html
+++ b/sic/templates/404.html
@@ -3,5 +3,5 @@
 {% load utils %}
 {% block title %}404 Not Found - sic{% endblock %}
 {% block content %}
-    <p class="help-text">This page doesn't exist. If you think this is a mistake please <a href="{% url 'about_contact' %}">contact the admins</a>.</p>
+    <p class="help-text">This page doesn't exist. If you think this is a mistake please <a href="/about/contact/">contact the admins</a>.</p>
 {% endblock %}
