--- a/sic/templates/500.html
+++ b/sic/templates/500.html
@@ -3,5 +3,5 @@
 {% load utils %}
 {% block title %}500 server error - sic{% endblock %}
 {% block content %}
-    <p class="help-text">A server error occured. The admins have probably been notified, but you can also <a href="{% url 'about_contact' %}">contact them about it</a>.</p>
+    <p class="help-text">A server error occured. The admins have probably been notified, but you can also <a href="/about/contact/">contact them about it</a>.</p>
 {% endblock %}
