--- a/sic/templates/about/about_invitation_tree.html
+++ b/sic/templates/about/about_invitation_tree.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 {% load cache %}
 {% load utils %}
-{% block title %}invitation tree | sic{% endblock %}
+{% block title %}invitation tree - {{ config.verbose_name }}{% endblock %}
 {% block style %}
     <style>
         ul.tree,
