--- a/sic/templates/about/privacy.html
+++ b/sic/templates/about/privacy.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load humanize %}
 {% load utils %}
-{% block title %}privacy policy | sic{% endblock %}
+{% block title %}privacy policy - {{ config.verbose_name }}{% endblock %}
 {% block content %}
     <div>
         <h1>privacy policy</h1>
