--- a/sic/templates/about/statistics.html
+++ b/sic/templates/about/statistics.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 {% load static %}
 {% load utils %}
-{% block title %}statistics - about sic{% endblock %}
+{% block title %}statistics - about {{ config.verbose_name }}{% endblock %}
 {% block style %}
     <style>
         @font-face {
