--- a/sic/templates/account/bookmarks.html
+++ b/sic/templates/account/bookmarks.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load humanize %}
 {% load utils %}
-{% block title %}bookmarks - sic{% endblock %}
+{% block title %}bookmarks - {{ config.verbose_name }}{% endblock %}
 {% block content %}
     <nav>
         <ul>
