--- a/sic/templates/account/edit_bookmark.html
+++ b/sic/templates/account/edit_bookmark.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Edit bookmark - sic{% endblock %}
+{% block title %}Edit bookmark - {{ config.verbose_name }}{% endblock %}
 {% block style %}
     <style>
     </style>
