--- a/sic/templates/account/edit_filters.html
+++ b/sic/templates/account/edit_filters.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Edit story exclude filters - sic{% endblock %}
+{% block title %}Edit story exclude filters - {{ config.verbose_name }}{% endblock %}
 {% block style %}
     <style>
         .story_filters_grid {
