--- a/sic/templates/account/edit_settings.html
+++ b/sic/templates/account/edit_settings.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Edit settings - sic{% endblock %}
+{% block title %}Edit settings - {{ config.verbose_name }}{% endblock %}
 {% block style %}
     <style>
         div.week {
