--- a/sic/templates/account/password_change.html
+++ b/sic/templates/account/password_change.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Password Change - sic {% endblock %}
+{% block title %}Password Change - {{ config.verbose_name }}{% endblock %}
 {% block content %}
     <h2>Password Reset</h2>
     {% if user.is_authenticated %}
