--- a/sic/templates/moderation/moderation.html
+++ b/sic/templates/moderation/moderation.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load humanize %}
 {% load utils %}
-{% block title %}Moderator panel | sic{% endblock %}
+{% block title %}Moderator panel - {{ config.verbose_name }}{% endblock %}
 {% block content %}
     <h1>Moderation panel</h1>
     <div>
