--- a/sic/templates/posts/markdown_help.html
+++ b/sic/templates/posts/markdown_help.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load humanize %}
 {% load utils %}
-{% block title %}Formatting help - sic {% endblock %}
+{% block title %}Formatting help - {{ config.verbose_name }}{% endblock %}
 {% block style %}
 
     <style>
