--- a/sic/templates/posts/search.html
+++ b/sic/templates/posts/search.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 {% load comment %}
 {% load utils %}
-{% block title %}search | sic{% endblock %}
+{% block title %}search - {{ config.verbose_name }}{% endblock %}
 {% block style %}
     <style>
         table, td {
