--- a/sic/templates/about/about_contact.html
+++ b/sic/templates/about/about_contact.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load humanize %}
 {% load utils %}
-{% block title %}contact - about sic{% endblock %}
+{% block title %}contact - about {{ config.verbose_name }}{% endblock %}
 {% block content %}
     <article>
         <header>
