--- a/sic/templates/account/add_filter.html
+++ b/sic/templates/account/add_filter.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{ title }} - sic{% endblock %}
+{% block title %}{{ title }} - {{ config.verbose_name }}{% endblock %}
 {% block style %}
     <style>
     </style>
