--- a/sic/templates/account/edit_profile.html
+++ b/sic/templates/account/edit_profile.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Edit profile - sic{% endblock %}
+{% block title %}Edit profile - {{ config.verbose_name }}{% endblock %}
 {% block content %}
     <h1>edit profile</h1>
     <form method="post" class="submit-story-form">
