--- a/sic/templates/account/login.html
+++ b/sic/templates/account/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Login - sic {% endblock %}
+{% block title %}Login - {{ config.verbose_name }} {% endblock %}
 {% block content %}
     <h2 style="place-self:center;">Login</h2>
 
