--- a/sic/templates/account/password_reset.html
+++ b/sic/templates/account/password_reset.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Password Reset - sic {% endblock %}
+{% block title %}Password Reset - {{ config.verbose_name }} {% endblock %}
 {% block content %}
     <h2>Password Reset</h2>
 
