--- a/sic/templates/account/profile_posts.html
+++ b/sic/templates/account/profile_posts.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load humanize %}
 {% load utils %}
-{% block title %}{{ user }} posts - sic{% endblock %}
+{% block title %}{{ user }} posts - {{ config.verbose_name }}{% endblock %}
 {% block content %}
     <ul class="posts">
         {% for post in posts %}
