--- a/sic/templates/tags/edit_aggregation.html
+++ b/sic/templates/tags/edit_aggregation.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load humanize %}
 {% load utils %}
-{% block title %}{% if agg %}edit {{ agg.name }}{% else %}new aggregation{% endif %} | sic{% endblock %}
+{% block title %}{% if agg %}edit {{ agg.name }}{% else %}new aggregation{% endif %} - {{ config.verbose_name }}{% endblock %}
 {% block content %}
     <h1>{% if agg %}edit {{ agg.name }}{% else %}new aggregation{% endif %}</h1>
     <nav>
