--- a/sic/templates/index.html
+++ b/sic/templates/index.html
@@ -58,13 +58,8 @@
     </style>
 {% endblock %}
 {% block content %}
-    {% if aggregations %}
-        {% if not has_subscriptions and request.user.is_authenticated %}<div class="showing-aggregations">You have no subscriptions, viewing default aggregations.</div>
-        {% elif not request.user.is_authenticated %}{% endif %}
-    {% elif aggregation %}
+    {% if aggregation %}
         <div class="showing-aggregations">Showing stories from <a href="{{ aggregation.get_absolute_url }}">{{ aggregation.name }}</a>. <nav style="display: inline-block"><ul><li><a href="{{ aggregation.get_details_url }}">view details</a></li></ul></nav></div>
-    {% else %}
-        {% if not has_subscriptions and request.user.is_authenticated %}<div class="showing-aggregations">You have no subscriptions, and there are no default tag aggregations available. Viewing all stories instead. <a href="{% url 'new_aggregation' %}">Create one</a> or <a href="{% url 'public_aggregations' %}">browse public ones from other users</a>.</div>{% elif not request.user.is_authenticated %}<div class="showing-aggregations">There are no default tag aggregations available. Viewing all stories.</div>{% endif %}
     {% endif %}
     {% if aggregations %}<div class="aggregations">{% for agg in aggregations %}<div><span class="sparklines" aria-hidden="true" title="activity for last 14 days">{{ agg.last_14_days }}</span><div><a href="{{ agg.get_absolute_url }}" class="agg-name" title="{{ agg.name }} {% if agg.description %} - {{ agg.description }}{% endif %}">{{ agg.name }}</a></div></div>{% endfor %}</div>{% endif %}
     <ul class="posts" aria-label="story post list">
