--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -422,7 +422,7 @@ body {
   margin: 0 auto;
   min-width: 250px;
   display: grid;
-  grid-template-columns: repeat(12, minmax(10px, 1fr));
+  grid-template-columns: repeat(24, minmax(10px, 1fr));
   grid-auto-rows: auto 1fr auto;
   row-gap: min(6vw, 0.3rem);
   width: 100%;
@@ -432,7 +432,7 @@ body {
 
 body>* {
   grid-row: span 1;
-  grid-column: 2 / span 10;
+  grid-column: 3 / span 20;
   max-width: 100%;
 }
 
@@ -450,7 +450,7 @@ body>main nav>ul{
   column-gap: 1rem;
   row-gap: 4px;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   flex-flow:wrap;
   margin: 0;
   width: max-content;
@@ -484,7 +484,7 @@ body>header {
   margin-bottom: 1.7rem;
   display: flex;
   flex-flow: row;
-  justify-content: left;
+  justify-content: flex-start;
   column-gap: 2rem;
 }
 body>header>nav {
@@ -494,7 +494,7 @@ body>header>nav>ul {
   list-style: none;
   column-gap: 1rem;
   display: flex;
-  justify-content: left;
+  justify-content: flex-start;
   flex-flow:wrap;
   margin: 0;
   width: 100%;
@@ -506,7 +506,7 @@ body>header>nav.user {
   margin-left: auto;
 }
 body>header>nav.user>ul{
-  justify-content: right;
+  justify-content: flex-end;
 }
 
 body>footer {
@@ -538,7 +538,7 @@ body>footer>nav.feeds {
 }
 body>footer>nav.feeds>ul {
   column-gap: 2px;
-  justify-content: right;
+  justify-content: flex-end;
 }
 body>footer>nav.feeds>ul>li {
   white-space: nowrap;
@@ -678,7 +678,7 @@ form.submit-story-form details[open] summary {
 }
 
 form.submit-story-form input[type="checkbox"] {
-  width: 100%;
+  align-self: center;
 }
 
 form.submit-story-form textarea {
@@ -828,7 +828,7 @@ input.bookmark_link {
   color: var(--link-color);
 }
 
-.avatar-small {
+img.avatar-small {
   height: 1.5rem;
   width: 1.5rem;
   border-radius: 50%;
@@ -844,7 +844,7 @@ input.bookmark_link {
   transform-origin: center;
 }
 
-.avatar-small:hover {
+img.avatar-small:hover {
   transition: all .2s .3s ease;
   transform: scale(6);
   border-radius: 0%;
@@ -852,7 +852,7 @@ input.bookmark_link {
   z-index: 1;
 }
 
-li.profile .avatar-small {
+li.profile img.avatar-small {
   transform-origin: top right;
 }
 
@@ -1478,6 +1478,15 @@ body>header>div.logo {
   display: inline-block;
 }
 
+@media (max-width: 1200px) {
+  :root {
+    --main-width: 92vw;
+  }
+  body>main, body>header, body>footer {
+    grid-column: 2 / span 22;
+  }
+}
+
 @media (max-width: 600px) {
   :root {
     --main-width: 92vw;
@@ -1495,22 +1504,27 @@ body>header>div.logo {
   }
 
   body>main {
-    grid-column: 1 / span 12;
+    grid-column: 1 / span 24;
     padding: .5rem 1rem;
   }
-  body>header {
+  body>header, body>footer {
     font-size: 90%;
     margin: 0;
     padding: .2rem .5rem;
     background-color: var(--header-bg-color);
-    border-bottom: 1px outset var(--header-bg-color);
-    grid-column: 1 / span 12;
+    grid-column: 1 / span 24;
     column-gap: 12px;
     margin-bottom: 7px;
   } 
+  body>header {
+    border-bottom: 1px outset var(--header-bg-color);
+  }
+  body>footer {
+    border-top: 1px inset var(--header-bg-color);
+  }
   nav.main.menu>ul{
     row-gap: 4px;
-    justify-content: left;
+    justify-content: flex-start;
     display: grid;
     grid-template-columns: max-content max-content;
     grid-auto-flow: row dense;
@@ -1522,6 +1536,13 @@ body>header>div.logo {
     background: var(--bg-color);
     border-radius: 5px;
     padding: 2px 5px;
+    display: inline-block;
+  }
+  nav.menu>ul>li>a.avatar-small{
+    border: none;
+    background: none;
+    border-radius: none;
+    padding: unset;
     display: inline-block;
   }
 
@@ -1542,7 +1563,7 @@ body>header>div.logo {
     width: 38vw;
   }
   nav.user.menu>ul {
-    column-gap:0;
+    column-gap:4px;
     row-gap: 4px;
   }
 
@@ -1559,6 +1580,11 @@ body>header>div.logo {
   form.reply-form>div.reply-parent{
     display: initial;
     border-bottom: 1px dotted;
+  }
+
+  article>fieldset {
+    max-width: var(--main-width);
+    margin: 0;
   }
 }
 
