--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -98,6 +98,7 @@
                         {% if request.user.is_authenticated %}
                             <li><a href="{% url 'account' %}#generate-invite" id="generate_invite_link">Invite user</a></li>
                         {% endif %}
+                        {{ header_links }}
                     </ul>
                 </nav>
                 {% if request.user.is_authenticated %}
