--- a/sic/templates/account/new_invitation_request.html
+++ b/sic/templates/account/new_invitation_request.html
@@ -3,21 +3,23 @@
 {% block title %}request an invite - {{ config.verbose_name }}{% endblock %}
 {% block content %}
     <h1>Creating an account on {{ config.html_label }}</h1>
-    <p class="help-text">You will need an invitation from an existing user to join. You can ask someone you know, on <a href="{% url 'about' %}">IRC</a> or submit an invitation request here. Members of the community can review your request and send you an invite.</p>
-    <h2>request an invite</h2>
-    <p class="help-text">If your request is submitted successfuly, you will receive a confirmation e-mail. Check that you actually receive it, otherwise you can't be informed if the request is accepted.</p>
-    <form method="post" class="submit-story-form">
-        {% csrf_token %}
-        {% for field in form %}
-            {{ field.errors }}
-            {{ field.label_tag }}
-            {% if field.help_text %}
-                <p class="help-text">{{ field.help_text }}</p>
-            {% endif %}
-            {{ field }}
-        {% endfor %}
-        <div class="button-flex-box">
-            <input type="submit" value="Submit">
-        </div>
-    </form>
+    <p class="help-text">{{ config.html_signup_request_info }}</p>
+    {% if config.ALLOW_INVITATION_REQUESTS %}
+        <h2>request an invite</h2>
+        <p class="help-text">If your request is submitted successfuly, you will receive a confirmation e-mail. Check that you actually receive it, otherwise you can't be informed if the request is accepted.</p>
+        <form method="post" class="submit-story-form">
+            {% csrf_token %}
+            {% for field in form %}
+                {{ field.errors }}
+                {{ field.label_tag }}
+                {% if field.help_text %}
+                    <p class="help-text">{{ field.help_text }}</p>
+                {% endif %}
+                {{ field }}
+            {% endfor %}
+            <div class="button-flex-box">
+                <input type="submit" value="Submit">
+            </div>
+        </form>
+    {% endif %}
 {% endblock %}
